@@ -1,6 +1,9 @@
 Release 0.5.1 (in development)
 ==============================
 
+* Fix the handling of ``:param:`` and ``:type:`` doc fields when
+  they contain markup (especially cross-referencing roles).
+
 * #65: Fix storage of depth information for PNGs generated by the
   pngmath extension.
 
